monitoring/grafana-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: default
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
  ports:
    - port: 3000
